--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,11 +1,11 @@
 appname = AwesomeResume
-httpport = 8080
+httpport = 6080
 runmode = dev
 #Session参数
 sessionname = rmsbackusersessionid
 #sessioncookielifetime = 100 cookie的有效期（秒），默认是session,即会话结束则过期
 #开启监控
-EnableAdmin = true
+EnableAdmin = false
 #开启JSON请求
 copyrequestbody = true
 #防止跨站请求伪造 未启用
@@ -16,7 +16,7 @@ xsrfexpire = 3600
 #数据库类型：postgres/mysql/sqlite3
 db_type = "mysql"
 #数据库表名前辍
-db_dt_prefix = "ori_"
+db_dt_prefix = ""
 
 #postgreSQL配置
 [postgres]
@@ -32,8 +32,10 @@ db_sslmode = "disable"
 db_alias = "default"
 db_name = "resume"
 db_user = "root"
-db_pwd = "123456"
-db_host = "localhost"
+#db_pwd = "123456"
+#db_host = "localhost"
+db_pwd = "awesomeProject2018"
+db_host = "111.231.251.144"
 db_port = 3306
 db_charset = "utf8"
 #sqlite3
@@ -56,3 +58,7 @@ redis_host = "127.0.0.1:6379"
 redis_password = ""
 #过期时间
 cache_expire = 10
+
+#密码加密拼接字符串
+key = "0123456789abcdef"
+salt = "AwesomeResume_"
