模板001新增简历信息管理1

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -57,8 +57,9 @@ level = 7
 redis_host = "127.0.0.1:6379"
 redis_password = ""
 #过期时间
-cache_expire = 10
+cache_expire = 3600
 
 #密码加密拼接字符串
+[password]
 key = "0123456789abcdef"
 salt = "AwesomeResume_"
